# buildworker-setup

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
src/: buildworker-environment-setup.in  buildworker-init.in  buildworker-setup.service.in  buildworker.service.in  digsig-setup.in  digsigserver.service.in  run-buildbot-worker.in  run-digsigserver.in
